--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "default_popup": "index.html"
   },
   "content_scripts": [ {
-    "js": [ "assets/lib/angular.min.js", "assets/lib/angularfire.min.js", "assets/lib/angular-route.min.js", "assets/lib/firebase.js", "assets/js/content.js"],
+    "js": [ "assets/lib/angular.min.js", "assets/lib/angularfire.min.js", "assets/lib/angular-route.min.js", "assets/lib/firebase.js", "assets/lib/scrollglue.js", "assets/js/content.js"],
     "matches": [ "*://*/*" ],
     "run_at": "document_start"
   } ],
